Replaced spaces with underscores in folder names

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-acquisition board OC/
+acquisition_board_OC/
 OpenCube/
 Photoreciever/
-Fiber coupled LED/
+Fiber_coupled_LED/
 datasheets/
 LED_modules/
 *no_TH
